# fluent

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  LICENSE  Landing.html  README.md  Sessions.html  Settings.html  app.py  build_dmg.sh  posthog-setup-report.md  release.sh  setup_app.py  setup_config.py  ship.sh  test_audio.py  vercel.json
.github/workflows/: windows-build.yml
api/: index.py  requirements.txt
backend/: .env.example  auth.py  database.py  fluent.db  main.py  meeting_types.py  requirements.txt
backend/tests/: test_meeting_type.py  test_profile.py
docs/: mac-sparkle-keysetup.md
docs/superpowers/plans/: 2026-06-23-cloud-transcription.md  2026-06-27-multi-speaker-transcription.md  2026-07-02-meeting-type-zero-debt.md  2026-07-05-sidebar-navigation.md  2026-07-07-mac-auto-update.md  2026-07-07-windows-auto-update-publish.md  2026-07-07-windows-release-script.md  2026-07-17-bundled-python-runtime.md  2026-07-17-github-releases-hosting.md
docs/superpowers/specs/: 2026-06-23-cloud-transcription-design.md  2026-06-27-multi-speaker-transcription-design.md  2026-06-28-coaching-report-redesign-design.md  2026-07-05-sidebar-navigation-design.md  2026-07-07-mac-auto-update-design.md  2026-07-07-windows-auto-update-publish-design.md  2026-07-07-windows-release-script-design.md  2026-07-17-bundled-python-runtime-design.md
fluent/: blackhole.py  config.py  pipeline.py  project.yml  report.py  setup_window.py
fluent-engine/: install_agent.py  main.py  requirements-common.txt  requirements-dev.txt  requirements-mac.txt  requirements-win.txt  requirements.txt  setup_engine.sh
fluent-engine/fluent/: audio.py  audio_check.py  coach.py  config.py  diarise.py  first_launch.py  onboarding.py  pipeline.py  project.yml  report.py  setup_window.py  speakers.py  transcribe.py
fluent-engine/fluent/Fluent/: AppDelegate.swift  Info.plist  ReportWindowController.swift  WebViewController.swift
fluent-engine/fluent/Fluent.xcodeproj/: project.pbxproj
fluent-engine/fluent/platform/: __init__.py  mac.py  win.py
fluent-engine/tests/: test_audio_check.py  test_coach.py  test_speakers.py  test_transcribe.py
fluent/Fluent/: AppDelegate.swift  DarwinNotificationBridge.swift  EngineSetupWindowController.swift  Fluent.entitlements  Info.plist  ReportWindowController.swift  WebViewController.swift
fluent/Fluent.xcodeproj/: project.pbxproj
fluent/Fluent.xcodeproj/project.xcworkspace/xcuserdata/rodrigocruzsouza.xcuserdatad/: UserInterfaceState.xcuserstate
fluent/Fluent.xcodeproj/xcshareddata/xcschemes/: Fluent.xcscheme
fluent/Fluent.xcodeproj/xcuserdata/rodrigocruzsouza.xcuserdatad/xcschemes/: xcschememanagement.plist
fluent/Fluent/Assets.xcassets/AppIcon.appiconset/: Contents.json
frontend/: report.css  report.html  report.js
scripts/: build_engine_runtime.sh  bundle_engine_runtime_into_app.sh  check-appicon-padding.py  generate-appcast.mjs  generate-appcast.test.mjs
website/: Fluent.dmg  index.html  privacy.html  reset-password.html  sample-report.html  vercel.json
website/mac/updates/: appcast.xml
website/windows/updates/: latest.json
windows/: .gitignore  README.md  bundle-engine.mjs  package-lock.json  package.json  release.sh  sync-frontend.mjs
windows/scripts/: generate-latest-json.mjs  generate-latest-json.test.mjs
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/src/: auth.rs  engine.rs  host_loop.rs  lib.rs  main.rs  tray.rs  update.rs
windows/web-src/: tauri-bridge.js
