[package]
name = "fluent-windows"
version = "0.1.0"
description = "Fluent for Windows"
authors = ["Fluent"]
edition = "2021"

[lib]
name = "fluent_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
# Windows Credential Manager for the JWT (mirrors the macOS Keychain path).
keyring = "2"

[features]
# This feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
